# recipes

./: .gitignore  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
promplate_recipes/: __init__.py  context.py  version.py
promplate_recipes/functional/: node.py
