[project]
name = "promplate-recipes"
dynamic = ["version"]
authors = [{ name = "Muspi Merol", email = "me@promplate.dev" }]
dependencies = ["promplate>=0.3.5.1,<0.4", "python-box~=7.1"]
requires-python = ">=3.10"
license = { text = "MIT" }
readme = "README.md"

[tool.pdm]
distribution = true
version = { source = "file", path = "promplate_recipes/version.py" }

[dependency-groups]
dev = ["black~=25.1.0", "isort~=6.0.1", "ruff~=0.12.7"]

[tool.pdm.scripts]
fmt = { composite = ["ruff check --fix --exit-zero", "isort .", "black ."] }

[tool.black]
line-length = 120

[tool.pyright]
typeCheckingMode = "standard"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
